--- a/src/main/javahelp/org/esa/s3tbx/s3tbx/snow/docs/style.css
+++ b/src/main/javahelp/org/esa/s3tbx/s3tbx/snow/docs/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #FFFFFF;
     color: #000000;
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 12;
+    font-size: 12pt;
     padding: 6pt;
     margin: 6pt;
 }
@@ -13,11 +13,12 @@ p {
 }
 
 .i1 {
-    margin-left: 30;
+    font-size: 10pt;
+    margin-left: 30px;
 }
 
 .i2 {
-    margin-left: 50;
+    margin-left: 50px;
 }
 
 .note {
@@ -41,7 +42,7 @@ p {
 
 h1 {
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 25;
+    font-size: 21pt;
     font-weight: bold;
     margin-top: 18pt;
     margin-right: 6pt;
@@ -51,7 +52,7 @@ h1 {
 
 h2 {
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 21;
+    font-size: 18pt;
     font-weight: bold;
     margin-top: 18pt;
     margin-right: 6pt;
@@ -61,7 +62,7 @@ h2 {
 
 h3 {
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 18;
+    font-size: 15pt;
     font-weight: bold;
     margin-top: 18pt;
     margin-right: 6pt;
@@ -71,7 +72,7 @@ h3 {
 
 h4 {
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 15;
+    font-size: 12pt;
     font-weight: bold;
     margin-top: 18pt;
     margin-right: 6pt;
@@ -81,7 +82,7 @@ h4 {
 
 h5 {
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 12;
+    font-size: 10pt;
     font-weight: bold;
     margin-top: 18pt;
     margin-right: 6pt;
@@ -91,7 +92,7 @@ h5 {
 
 h6 {
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 11;
+    font-size: 8pt;
     font-weight: bold;
     margin-top: 18pt;
     margin-right: 6pt;
@@ -104,6 +105,12 @@ li {
     margin-bottom: 4pt;
 }
 
+ul {
+    padding-left: 32pt;
+    margin-top: 4pt;
+    margin-bottom: 4pt;
+}
+
 table {
     border-width: 0;
     border-collapse: collapse;
@@ -111,22 +118,10 @@ table {
     margin: 0;
 }
 
-invisibletable {
-    border-width: 0;
-    border-style: solid;
-    border-color: #FFFFFF;
-    border-collapse: collapse;
-    padding: 1px;
-    margin: 0;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    font-style: normal;
-}
-
 th {
-    font-size: 12;
+    font-size: 12pt;
     text-align: left;
-    border-width: 1;
+    border-width: 1pt;
     border-color: #BBBBBB;
     border-style: solid;
     border-collapse: collapse;
@@ -137,8 +132,8 @@ th {
 }
 
 td {
-    font-size: 11;
-    border-width: 1;
+    font-size: 11pt;
+    border-width: 1pt;
     border-color: #BBBBBB;
     border-style: solid;
     border-collapse: collapse;
@@ -151,8 +146,8 @@ td {
 
 table.header {
     width: 100%;
-    height: 29;
-    font-size: 17;
+    height: 29pt;
+    font-size: 17pt;
     color: #ffffff;
     vertical-align: middle;
     background-color: #1d3752;
@@ -162,8 +157,8 @@ table.header {
 }
 
 .header {
-    font-size: 17;
-    height: 29;
+    font-size: 17pt;
+    height: 29pt;
     color: #ffffff;
     vertical-align: middle;
     background-color: #1d3752;
@@ -173,9 +168,9 @@ table.header {
 }
 
 hr {
-    height: 4;
+    height: 4pt;
     color: #000063;
     border-color: #000063;
     border-style: solid;
-    border-width: 1;
+    border-width: 1pt;
 }
